--- a/src/app/player-notes/player-notes.component.css
+++ b/src/app/player-notes/player-notes.component.css
@@ -1,5 +1,6 @@
 .player-no-notes-heading {
     margin-top: 15px;
+    text-indent: 25px;
 }
 
 .quill-shell {
